examples/test/testpolicy9693.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9693
  namespace: namespace248
spec:
  podSelector:
    matchLabels:
      key8: value13
      key32: value20
      key28: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value44
          key36: value27
          key46: value16
      podSelector:
        matchLabels:
          key15: value24
          key48: value34
